# advanced-rag

./: README.md  advanced_pdf_rag.py  pdf_rag.py  pyproject.toml
faiss_index/: index.pkl
