[project]
name = "advanced-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain-community>=0.3.23",
    "langchain>=0.3.25",
    "sentence-transformers>=4.1.0",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.2",
    "pypdf>=5.4.0",
]
